# plex-media-ingest

./: Cargo.toml  LICENSE.MIT  README.md
src/: config.rs  directory.rs  main.rs  media.rs  movie.rs  show.rs
