[package]
name = "plex-media-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
infer = "0.15.0"
inline_colorization = "0.1.6"
inquire = "0.6.2"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
sanitise-file-name = "1.0.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
stderrlog = "0.5.4"
urlencoding = "2.1.3"
walkdir = "2.4.0"
